// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExampleCard should display correctly as a table card 1`] = `
<div
  className="md-paper md-paper--1 md-card md-card--table md-background--card md-cell md-cell--12"
  id="table-example"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
>
  <div
    className="md-card-title md-card-title--primary"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={undefined}
  >
    <h2
      className="md-card-title--title md-card-title--large md-text"
      id={undefined}
    >
      Table Example
    </h2>
    <textarea
      aria-hidden={true}
      className="examples-page__example-link"
      id="table-example-copy-area"
      readOnly={true}
      tabIndex={-1}
      value="about:blank#table-example"
    />
    <button
      className="md-btn md-btn--icon md-pointer--hover md-inline-block examples-page__example-link-btn"
      disabled={undefined}
      href={undefined}
      id="table-example-copy-btn"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <i
        className="md-icon material-icons md-text--inherit"
        style={undefined}
      >
        link
      </i>
    </button>
    <button
      className="md-btn md-btn--icon md-pointer--hover md-inline-block md-collapser md-collapser--card"
      disabled={undefined}
      href={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <svg
        className="md-icon md-text--inherit"
        style={undefined}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
  <table
    className="md-data-table"
  >
    <thead
      className="md-table-header"
    >
      <tr
        className="md-table-row"
      >
        <th
          className="md-table-column md-table-column--header"
        >
          Hello!
        </th>
      </tr>
    </thead>
    <tbody
      className="md-table-body"
    >
      <tr
        className="md-table-row"
      >
        <td
          className="md-table-column md-table-column--header"
        >
          Hello!
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExampleCard should display correctly as a table card 2`] = `
<div
  className="md-paper md-paper--1 md-card md-card--table md-background--card md-cell md-cell--12"
  id="table-example"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
>
  <div
    className="md-card-title md-card-title--primary"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={undefined}
  >
    <h2
      className="md-card-title--title md-card-title--large md-text"
      id={undefined}
    >
      Table Example
    </h2>
    <textarea
      aria-hidden={true}
      className="examples-page__example-link"
      id="table-example-copy-area"
      readOnly={true}
      tabIndex={-1}
      value="about:blank#table-example"
    />
    <button
      className="md-btn md-btn--icon md-pointer--hover md-inline-block examples-page__example-link-btn"
      disabled={undefined}
      href={undefined}
      id="table-example-copy-btn"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <i
        className="md-icon material-icons md-text--inherit"
        style={undefined}
      >
        link
      </i>
    </button>
    <button
      className="md-btn md-btn--icon md-pointer--hover md-inline-block md-collapser md-collapser--card"
      disabled={undefined}
      href={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <svg
        className="md-icon md-text--inherit"
        style={undefined}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
  <section
    className="md-card-text"
  >
    <div
      className="markdown-container md-text-container examples-page__card__description"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Some <strong>description</strong> <em>markdown</em></p>
        ",
        }
      }
    />
  </section>
  <table
    className="md-data-table"
  >
    <thead
      className="md-table-header"
    >
      <tr
        className="md-table-row"
      >
        <th
          className="md-table-column md-table-column--header"
        >
          Hello!
        </th>
      </tr>
    </thead>
    <tbody
      className="md-table-body"
    >
      <tr
        className="md-table-row"
      >
        <td
          className="md-table-column md-table-column--header"
        >
          Hello!
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExampleCard should display correctly with a description 1`] = `
<div
  className="md-paper md-paper--1 md-card md-background--card md-cell md-cell--12"
  id="second-example"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
>
  <div
    className="md-card-title md-card-title--primary"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={undefined}
  >
    <h2
      className="md-card-title--title md-card-title--large md-text"
      id={undefined}
    >
      Second Example
    </h2>
    <textarea
      aria-hidden={true}
      className="examples-page__example-link"
      id="second-example-copy-area"
      readOnly={true}
      tabIndex={-1}
      value="about:blank#second-example"
    />
    <button
      className="md-btn md-btn--icon md-pointer--hover md-inline-block examples-page__example-link-btn"
      disabled={undefined}
      href={undefined}
      id="second-example-copy-btn"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <i
        className="md-icon material-icons md-text--inherit"
        style={undefined}
      >
        link
      </i>
    </button>
    <button
      className="md-btn md-btn--icon md-pointer--hover md-inline-block md-collapser md-collapser--card"
      disabled={undefined}
      href={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <svg
        className="md-icon md-text--inherit"
        style={undefined}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
  <section
    className="md-card-text"
  >
    <div
      className="markdown-container md-text-container examples-page__card__description"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<pre><code># Second Example
        That contains some markdown!
        
        - one
        - two
        - three
        
        &gt; some note
        </code></pre>",
        }
      }
    />
    <h1>
      Hello, World!
    </h1>
    <div>
      This should have some content...
    </div>
  </section>
</div>
`;

exports[`ExampleCard should display correctly without a description 1`] = `
<div
  className="md-paper md-paper--1 md-card md-background--card md-cell md-cell--12"
  id="first-example"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
>
  <div
    className="md-card-title md-card-title--primary"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={undefined}
  >
    <h2
      className="md-card-title--title md-card-title--large md-text"
      id={undefined}
    >
      First Example
    </h2>
    <textarea
      aria-hidden={true}
      className="examples-page__example-link"
      id="first-example-copy-area"
      readOnly={true}
      tabIndex={-1}
      value="about:blank#first-example"
    />
    <button
      className="md-btn md-btn--icon md-pointer--hover md-inline-block examples-page__example-link-btn"
      disabled={undefined}
      href={undefined}
      id="first-example-copy-btn"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <i
        className="md-icon material-icons md-text--inherit"
        style={undefined}
      >
        link
      </i>
    </button>
    <button
      className="md-btn md-btn--icon md-pointer--hover md-inline-block md-collapser md-collapser--card"
      disabled={undefined}
      href={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <svg
        className="md-icon md-text--inherit"
        style={undefined}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
  <section
    className="md-card-text"
  >
    <div />
  </section>
</div>
`;
